clusters/apps/default/expenses-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-ui-deployment
  namespace: default
  labels:
    app: expenses-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-ui-pod
  template:
    metadata:
      labels:
        app: expenses-ui-pod
    spec:
      containers:
        - image: ghcr.io/crisszkutnik/expenses-ui:1.0.6
          imagePullPolicy: IfNotPresent
          name: expenses-ui-container
          resources:
            requests:
              memory: "64Mi"
              cpu: 0.1
            limits:
              memory: "512Mi"
              cpu: 0.5
          ports:
            - containerPort: 80
