clusters/apps/default/expenses-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-expenses-ui
  namespace: default
  labels:
    auth.cristobalszk.dev/enabled: "true"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: true
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: private-k8s.cristobalszk.dev
      http:
        paths:
          - path: /expenses-ui(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: expenses-ui-service
                port:
                  number: 80
